--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^13.2.4
+  retrofit: ^4.1.0
+  analyzer: ^6.2.0
+  dio: ^5.4.3+1
+  json_serializable: 6.7.1 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^8.1.0
+  build_runner: ^2.4.9
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
