--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   analyzer: ^6.2.0
   dio: ^5.4.3+1
   json_serializable: 6.7.1 
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
