--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^13.2.4
-  retrofit: ^4.1.0
+  go_router: ^13.2.0
   analyzer: ^6.2.0
-  dio: ^5.4.3+1
   json_serializable: 6.7.1 
   json_annotation: ^4.8.1
+  firebase_auth: ^4.14.1
+  firebase_core: ^2.23.0  
+  equatable: ^2.0.5
+  formz: ^0.7.0
+  get_it: ^7.6.7
+  flutter_bloc: ^8.1.5
+  either_dart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
