--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_it: ^7.6.7
   flutter_bloc: ^8.1.5
   either_dart: ^1.0.0
+  internet_connection_checker_plus: ^2.2.0
 
 dev_dependencies:
   flutter_test:
