--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   either_dart: ^1.0.0
   internet_connection_checker_plus: ^2.2.0
+  cloud_firestore: ^4.15.8
 
 dev_dependencies:
   flutter_test:
