--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   either_dart: ^1.0.0
   internet_connection_checker_plus: ^2.2.0
   cloud_firestore: ^4.15.8
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
