updated UI design in reset password

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter:
     - assets/images/onboarding1.jpg
     - assets/images/onboarding2.jpg
     - assets/images/onboarding3.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/envelope.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
